Regression: Solidify modifier result differs in recent version #105496

Closed
opened 2023-03-06 16:49:52 +01:00 by newbeeorz · 3 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA T400 4GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-05 23:13, hash: 9eee008691f3
Worked: (newest version of Blender that worked as expected)

Short description of error
Stroke edge with solid,has no effects.

Exact steps for others to reproduce the error

  • Add a monkey head,add a material,set color to black,select Backface Culling.
  • Add a solidify,flip Normals,material offset to 1.
  • Switch to material preview,has no efftcts.
    The same project open with earlier versions has a black stroke.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA T400 4GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-05 23:13, hash: `9eee008691f3` Worked: (newest version of Blender that worked as expected) **Short description of error** Stroke edge with solid,has no effects. **Exact steps for others to reproduce the error** - Add a monkey head,add a material,set color to black,select Backface Culling. - Add a solidify,flip Normals,material offset to 1. - Switch to material preview,has no efftcts. The same project open with earlier versions has a black stroke.
896 KiB
newbeeorz added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-06 16:49:53 +01:00
Author

picture 1,open with blender-3.6.0-alpha+main.9eee008691f3-windows.amd64-release;
picture 2,open with blender-3.6.0-alpha+main.2491cd5e16dc-windows.amd64-release.

picture 1,open with blender-3.6.0-alpha+main.9eee008691f3-windows.amd64-release; picture 2,open with blender-3.6.0-alpha+main.2491cd5e16dc-windows.amd64-release.
Pratik Borhade changed title from Stroke effect is lost. to Regression: Solidify modifier results differs in recent version 2023-03-07 07:31:44 +01:00
Pratik Borhade changed title from Regression: Solidify modifier results differs in recent version to Regression: Solidify modifier result differs in recent version 2023-03-07 07:31:53 +01:00
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-03-07 07:32:46 +01:00
Member

Hi, thanks for the report. I can confirm. This has started to happen after: 45cff837bc
@HooglyBoogly ^

Hi, thanks for the report. I can confirm. This has started to happen after: 45cff837bc0a91cf3940cc8116f6773992d62d95 @HooglyBoogly ^
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-03-07 07:35:09 +01:00
Hans Goudey self-assigned this 2023-03-07 13:31:36 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-03-07 21:04:38 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-07 22:11:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105496
No description provided.