Fix #105496: Incorrect solidify modifier materials after recent cleanup